Bug 124024 - Scaling factor of the Sheets isn't displayed correct
Summary: Scaling factor of the Sheets isn't displayed correct
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.1.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-03-12 13:19 UTC by Juergen Klatt
Modified: 2019-03-21 15:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
CALC: Wrong Scaling factor is displayed (74.08 KB, application/vnd.oasis.opendocument.text)
2019-03-12 13:19 UTC, Juergen Klatt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Klatt 2019-03-12 13:19:25 UTC
Created attachment 149913 [details]
CALC: Wrong Scaling factor is displayed

Hello,
in my example document, a macro is deposited, which reads all footnotes from the example document and lists them in a new Calc document. The table of the Calc document is formatted at the same time and the scaling factor is set to 75% for printing. 
The table is formatted correctly, but the scaling factor is not displayed correctly in the Page menu:
Menu Format --> Page... Register "Sheet"
Instead of 75%, there is 100%.
If I run the macro under AOO 4.1.6 the scaling factor will be displayed correctly at 75%.

If I set the scaling factor manually, it will be included in the sheet, 
but in the said menu it will stay at 100%.

Best Regards

Juergen Klatt
Comment 1 raal 2019-03-17 21:28:42 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 063f6b838f3a8eb8b8709b8de08bc5876124f8ca is the first bad commit
commit 063f6b838f3a8eb8b8709b8de08bc5876124f8ca
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Sep 27 20:00:44 2018 +0200

    source 38cdfcd55f05058e2adfe5bf01e85ca5417649af

author	Caolán McNamara <caolanm@redhat.com>	2018-09-27 13:51:14 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-27 18:06:03 +0200
commit 38cdfcd55f05058e2adfe5bf01e85ca5417649af (patch)
tree 4353b4494ea5398afa39bd7af243d37d09b2916b
parent 4d382636b0b1c555af2b98f2f41b4776fd7b5ffb (diff)
weld ScTablePage
Comment 2 Commit Notification 2019-03-19 15:04:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/51cd6a93a6dd5bbe98548ea0fd702410a6a2d001%5E%21

Resolves: tdf#124024 scaling factor isn't displayed correctly

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2019-03-19 15:10:15 UTC
fixed in master, backport in gerrit
Comment 4 Xisco Faulí 2019-03-20 16:08:41 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: eb128a7d6bbc27b4dbbf9461c81c90e40203b114
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán McNamara, thanks for fixing this issue!!
Comment 5 Commit Notification 2019-03-20 16:10:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/83b148ba6ffe6745987ab2656afeb996a85a01c1%5E%21

Resolves: tdf#124024 scaling factor isn't displayed correctly

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Juergen Klatt 2019-03-20 17:31:27 UTC
Tested with:
libo-62-64~2019-03-20_08.04.50_LibreOfficeDev_6.2.3.0.0_Win_x64.msi

Excuse me, my english is‘nt the best.
1.
So please follow at first these steps:
a) open Calc
b) open „Format → Page...“
c) Tab „Sheet“
d) change the „Scaling Factor“ to 50%
e) Press OK
f) In the Sheet you will see now the dashed lines of the Pagesize
g) Go back into the Menu „Format → Page...“
h) Here you‘ll see the  „Scaling Factor“ do‘nt show 50%, it shows 100%
i) It does‘nt matter what you set there, the „Scaling Factor“ always shows 100%


2. Test with a Macro
I opened my uploaded Writer document and started the macro "Export Footenotes"
Then Calc opens with the listed footnotes and the scaling factor is set to 75%.
However, the error already exists in the Page Style: Default menu on the Sheet tab because the scale factor remains at 100% instead of 75%.

Fazit:
The bug still exists.
Comment 7 Xisco Faulí 2019-03-20 17:38:05 UTC
(In reply to Juergen Klatt from comment #6)
> Tested with:
> libo-62-64~2019-03-20_08.04.50_LibreOfficeDev_6.2.3.0.0_Win_x64.msi

please, notice you are using 6.2.3.0.0 not 6.3 master. You can get it from https://dev-builds.libreoffice.org/daily/master/
Comment 8 Juergen Klatt 2019-03-21 15:42:09 UTC
Tested with:
libo-master64~2019-03-21_01.28.58_LibreOfficeDev_6.3.0.0.alpha0_Win_x64.msi

Version: 6.3.0.0.alpha0+ (x64)
Build ID: ad62ae13ed9b66a8a61b52d45bbb54f4fa657c59
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-21_01:28:58
Locale: de-DE (de_DE); UI-Language: en-US
Calc: CL

Everything works fine.
The Bug is gone.

Thank you very much.

Best Regards
Juergen Klatt