Resolves: tdf#124024 scaling factor isn't displayed correctly

Change-Id: If08731217c0839ebd8d51399bb0dd1a3b598dceb