sc/source/ui/pagedlg/tptable.cxx
@@ -223,7 +223,7 @@ void ScTablePage::Reset( const SfxItemSet* rCoreSet )
         m_xEdScalePageNum->set_value( (nPages > 0) ? nPages : 1 );
     }
 
-    if (m_xLbScaleMode->get_active() == 0)
+    if (m_xLbScaleMode->get_active() == -1)
     {
         // fall back to 100%
         OSL_FAIL( "ScTablePage::Reset - missing scaling item" );
